--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,8 @@
 @import './variables.scss';
 @import './blocks/header.scss';
 @import './blocks/application.scss';
+@import './blocks/element-form.scss';
+@import './blocks/_button.scss';
 
 
 
@@ -18,14 +20,4 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-
-.container {
-    display: block;
-    max-width: 1920px;
-    padding: 0 15px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
 }
